--- a/src/DynamoCoreWpf/Controls/RunSettingsControl.xaml
+++ b/src/DynamoCoreWpf/Controls/RunSettingsControl.xaml
@@ -85,7 +85,20 @@
                                 IsEnabled="{Binding Path=RunButtonEnabled}"
                                 Visibility="{Binding RunButtonVisibility}"
                                 Focusable="False" Margin="0,0,2.5,0"/>
-            
+
+            <Button Name="CancelButton"
+                                Width="100"
+                                Content="{x:Static p:Resources.DynamoViewCancelButton}"
+                                Style="{StaticResource ResourceKey=STextButton}"
+                                Click="RunButton_OnClick"
+                                Command="{Binding CancelRunCommand}"
+                                CommandParameter=""
+                                ToolTip="{Binding CancelButtonToolTip}"
+                                ToolTipService.ShowOnDisabled="True"
+                                IsEnabled="{Binding Path=CancelButtonEnabled}"
+                                Visibility="{Binding CancelButtonVisibility}"
+                                Focusable="False" Margin="0,0,2.5,0"/>
+
             <TextBox Name="RunPeriodTextBox" 
                     Text="{Binding RunPeriod, Converter={StaticResource RunPeriodConverter}, Mode=TwoWay}"
                      VerticalContentAlignment="Center"
