Changes to Core to enable stepwise extension

--- a/src/DynamoCoreWpf/UI/Themes/Modern/DynamoConverters.xaml
+++ b/src/DynamoCoreWpf/UI/Themes/Modern/DynamoConverters.xaml
@@ -47,6 +47,9 @@
                                               NoneBrush="#444">
     </controls:ConnectionStateToBrushConverter>
 
+    <controls:ConnectionStateToBoolConverter x:Key="ConnectionStateToBoolConverter">
+    </controls:ConnectionStateToBoolConverter>
+
     <controls:ConnectionStateToVisibilityCollapsedConverter x:Key="ConnectionStateToVisibilityCollapsedConverter"/>
                                                             
     <controls:StateToColorConverter x:Key="StateToColorConverter"
